--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "rest-server-in6bm",
+  "name": "ControlAlumnos",
   "version": "1.0.0",
-  "description": "Rest Server IN6BM con conección a mongodb",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Victor Cancinos",
+  "author": "Angel Escobar",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,7 +15,9 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
